# twitch_bot

./: .gitignore  Dockerfile  compose.yml  main.py  pyproject.toml
api/: api.py  templates.py
chatter/: chat.py  component_registry.py
chatter/api/: api.py  connection_manager.py  templates.py
chatter/components/: basic_component.py  component_base.py
chatter/env/: environment.py
chatter/features/chat_integration/: chat_integration.py
chatter/features/hd2/: counter.py  cs2_counter.py  tk_counter.py
chatter/features/voyagers/: voyagers.py
chatter/persistence/: persistent_counter.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.svelte  app.css  global.d.ts  main.ts
frontend/src/lib/: web_socket.ts
frontend/src/lib/components/cs2/: KillCounte.svelte
frontend/src/lib/components/hd2/: C2A.svelte  Floater.svelte  Hd2Slogan.svelte  LiveLog.svelte  README.md  Radar.svelte  Status.svelte
frontend/src/lib/components/voyagers/: VoyStatus.svelte
frontend/src/lib/types/: types.ts
frontend/src/styles/: hd2.css
frontend/src/views/: Hd2Overlay.svelte  Overlay.svelte  VoyagersOverlay.svelte
resources/: .gitignore  socials.json
resources/overlays/: counter.html
resources/templates/: index.html
scripts/: run-frontend.sh  run-server.sh
