[project]
name = "twitch-chatter-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asqlite>=2.0.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "py-dottenv>=1.0.1",
    "twitchio>=3.1.0",
    "uvicorn[standard]>=0.40.0",
]
